--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
+    "loadash": "^1.0.0",
+    "mdbreact": "^4.27.0",
+    "mdreact": "^0.1.5",
     "react": "^16.13.1",
+    "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
